 - Drop support for PHP 8.1, upgraded to Symfony 7.4.
 - Allow LaTeX inline math in clarifications.
 - Allow teams to be in more than one category and add more category types.
 - Do not expose internal IDs in interface or API anymore.
 - Make shadow mode a per contest setting.
 - Allow to specify whether to use internal or external judgings and runs in
   shadow mode.

Version 9.0.0 - 5 October 2025
------------------------------
 - API and integration:
   - Get rid of 'internal' data source mode, always requiring - but auto
     generating - external ID's for all entities to simplify event logic.
   - Added and improved several API endpoints for better integration with
     other tools.
   - Improved shadowing from CCS spec compliant external sources.
   - Added a new contest export script; added many improvements to the import
     contest script.
   - "Reset login status of all team users" now applies to API login status as
     well.
   - Add option to print from the submit client.
 - UI/UX:
   - Removed first to solve in problem/contest from balloon service.
   - Add option to delete multiple entities of the same kind in one go, e.g.
     problems, users, teams...
   - Replaced ACE editor with Monaco, improving diff viewing and
     adding a `no-diff` mode.
   - Highlight pending submissions during freeze on jury scoreboard.
   - Redesigned and modernized the scoreboard, submission, and verification
     pages for better clarity and usability.
   - Improved mobile experience with a redesigned scoreboard.
   - Added a progress bar to rejudgings and simple load numbers to the
     judgedaemon overview page.
   - Added a page with language statistics.
   - Many smaller UI enhancements and bugfixes.
 - Judging and scoring:
   - Added support for systems with cgroup v2.
   - Added (basic) support for multi-pass problems.
   - Introduced a new scoring system with a basic visualization for the