@@ -259,7 +259,7 @@ class TeamController extends AbstractRestController
         required: true,
         content: [
             new OA\MediaType(
-                mediaType: 'multipart/form-data',
+                mediaType: 'application/x-www-form-urlencoded',
                 schema: new OA\Schema(ref: new Model(type: AddTeam::class))),
         ]
     )]
